@@ -214,6 +214,10 @@
 	define('HOST_MAINTENANCE_STATUS_OFF',	0);
 	define('HOST_MAINTENANCE_STATUS_ON',	1);
 
+	define('MAINTENANCE_STATUS_ACTIVE',	0);
+	define('MAINTENANCE_STATUS_APPROACH',	1);
+	define('MAINTENANCE_STATUS_EXPIRED',	2);
+
 	define('HOST_AVAILABLE_UNKNOWN',	0);
 	define('HOST_AVAILABLE_TRUE',		1);
 	define('HOST_AVAILABLE_FALSE',		2);
